--- a/framework-sso/sso-service/pom.xml
+++ b/framework-sso/sso-service/pom.xml
@@ -98,5 +98,14 @@
     </dependency>
   </dependencies>
 
-
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/java</directory>
+        <includes>
+          <include>**/*.xml</include>
+        </includes>
+      </resource>
+    </resources>
+  </build>
 </project>
