--- a/framework-common/pom.xml
+++ b/framework-common/pom.xml
@@ -107,6 +107,24 @@
       <version>1.18.0</version>
     </dependency>
 
+    <!-- Swagger -->
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>2.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>2.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.drore.cloud</groupId>
+      <artifactId>swagger-bootstrap-ui</artifactId>
+      <version>1.0</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
